--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,8 @@
 <footer>
   <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
     <span>
-        <b>{{ site.owner}}</b>
+        <b>MastiffGaming</b>
     </span>
-    {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span>
+    <span>© 2024</span>
   </a>
 </footer>
