--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <header>
   <div>
-    <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">
+    <a href="{{ /mastiffgaming }}">
     {% assign owner_first_name = site.owner | split: " " %}
-    <h1>{{ owner_first_name[0] | downcase }}@home:~$</h1>
+    <h1>Mastiff Gaming</h1>
     </a>
     <div class="header-links">
       {% include links.html %}
     </div>
   </div>
 </header>
+
